# cc-switch-web

./: .gitignore  Cargo.toml  README.md  README_JA.md  README_WEB.md  README_WEB_JA.md  README_WEB_ZH.md  README_ZH.md  README_original.md  README_original_JA.md  README_original_ZH.md  package.json  vite.web.config.ts
.github/workflows/: ci.yml
_dev/: architecture-plan.md  experimental-headless.patch  migration-roadmap.md  mzparse-analysis.md  research-notes.md  revert-log.md  unmapped-commands-classification.md  verification-results.md
src/: types.ts
src-core/: Cargo.toml
src-core/src/: app_config.rs  app_store.rs  claude_desktop_config.rs  lib.rs  platform.rs  provider.rs  settings.rs  store.rs  usage_events.rs
src-core/src/commands/: balance.rs  coding_plan.rs  config.rs  copilot.rs  deeplink.rs  env.rs  failover.rs  global_proxy.rs  hermes.rs  import_export.rs  mcp.rs  misc.rs  mod.rs  model_fetch.rs  omo.rs  openclaw.rs  plugin.rs  profile.rs  prompt.rs  provider.rs  proxy.rs  s3_sync.rs  session_manager.rs  settings.rs  skill.rs  speedtest.rs  stream_check.rs  subscription.rs  sync_support.rs  usage.rs  webdav_sync.rs  workspace.rs
src-core/src/database/: backup.rs  mod.rs
src-core/src/database/dao/: providers_seed.rs  proxy.rs  usage_rollup.rs
src-core/src/proxy/: circuit_breaker.rs  failover_switch.rs  forwarder.rs  handler_context.rs  handlers.rs  mod.rs  response_processor.rs  server.rs  state.rs  types.rs
src-core/src/proxy/providers/: transform_codex_chat.rs
src-core/src/proxy/usage/: logger.rs
src-core/src/services/: mod.rs  proxy.rs  s3_auto_sync.rs  speedtest.rs  sql_helpers.rs  stream_check.rs  subscription.rs  usage_cache.rs  usage_stats.rs  webdav_auto_sync.rs
src-core/src/services/provider/: mod.rs
src-tauri/: Cargo.toml
src-tauri/src/: app_config.rs  app_store.rs  auto_launch.rs  claude_desktop_config.rs  claude_mcp.rs  claude_plugin.rs  codex_config.rs  codex_history_migration.rs  codex_state_db.rs  config.rs  error.rs  gemini_config.rs  gemini_mcp.rs  grok_config.rs  hermes_config.rs  init_status.rs  lib.rs  model_capabilities.rs  openclaw_config.rs  opencode_config.rs  platform_tauri.rs  prompt.rs  prompt_files.rs  settings.rs  store.rs  usage_events.rs
src-tauri/src/commands/: config.rs  failover.rs  global_proxy.rs  import_export.rs  mcp.rs  misc.rs  proxy.rs  s3_sync.rs  settings.rs  skill.rs  stream_check.rs  sync_support.rs  webdav_sync.rs
src-tauri/src/database/: mod.rs
src-tauri/src/deeplink/: mod.rs
src-tauri/src/mcp/: mod.rs
src-tauri/src/proxy/: circuit_breaker.rs  mod.rs  types.rs
src-tauri/src/services/: balance.rs  coding_plan.rs  config.rs  env_checker.rs  env_manager.rs  mcp.rs  profile.rs  prompt.rs  proxy.rs  s3.rs  s3_auto_sync.rs  s3_sync.rs  session_usage.rs  session_usage_codex.rs  session_usage_gemini.rs  (+11 more)
src-web/: Cargo.toml  build.rs
src-web/src/: main.rs  platform_web.rs  routes.rs  web_assets.rs
(+10 files in other folders)
